# oryxis

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  ROADMAP-0.7.md  SELF_HOSTING.md  install.sh
.cargo/: config.toml
.github/: FUNDING.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  nightly.yml  release-aws.yml  release-k8s.yml  release-mcp.yml  release-relay.yml  release.yml  update-manifest.yml
crates/oryxis-app/: Cargo.toml  build.rs
crates/oryxis-app/proptest-regressions/: app_tests.txt
crates/oryxis-app/src/: ai.rs  ansi_render.rs  app.rs  app_tests.rs  boot.rs  color_picker.rs  connect_methods.rs  dispatch.rs  dispatch_ai.rs  dispatch_cloud.rs  dispatch_editor.rs  dispatch_history.rs  dispatch_keys.rs  dispatch_known_hosts.rs  dispatch_mcp.rs  dispatch_navigation.rs  dispatch_onboarding.rs  dispatch_plugins.rs  dispatch_port_forwards.rs  dispatch_proxy_identity.rs  dispatch_session_group.rs  dispatch_settings.rs  dispatch_sftp.rs  dispatch_sftp_files.rs  dispatch_sftp_sync.rs  dispatch_sftp_transfers.rs  dispatch_share.rs  dispatch_snippets.rs  dispatch_ssh.rs  dispatch_sync.rs  dispatch_tabs.rs  dispatch_terminal.rs  dispatch_tray.rs  dispatch_vault.rs  fonts.rs  hotkeys.rs  i18n.rs  jumplist.rs  main.rs  mcp.rs  (+25 more)
crates/oryxis-app/src/dispatch_cloud/: discovery.rs  dynamic_group.rs  form.rs  mod.rs  transports.rs
crates/oryxis-app/src/dispatch_settings/: mod.rs  shell.rs  themes.rs
crates/oryxis-app/src/i18n/: ar.rs  de.rs  en.rs  es.rs  fa.rs  fr.rs  id.rs  it.rs  ja.rs  ko.rs  mod.rs  pl.rs  pt_br.rs  ru.rs  tr.rs  uk.rs  vi.rs  zh.rs
crates/oryxis-app/src/plugins/: cache.rs  download.rs  host.rs  manifest.rs  mod.rs  provider.rs  verify.rs
crates/oryxis-app/src/state/: ai.rs  forms.rs  mcp.rs  modal.rs  modes.rs  overlay.rs  sftp.rs  sync.rs  tabs.rs  theme_editor.rs  vault.rs
crates/oryxis-app/src/views/: chain_editor.rs  chrome.rs  cloud_accounts.rs  connection_progress.rs  dashboard.rs  group_panel.rs  history.rs  host_panel.rs  icon_picker.rs  jump_host_picker.rs  keys.rs  known_hosts.rs  layout.rs  mod.rs  new_tab_picker.rs  onboarding.rs  plugins_panel.rs  port_forwards.rs  session_group_panel.rs  settings.rs  settings_themes.rs  settings_ui_themes.rs  sftp.rs  sidebar.rs  sidebar_chat.rs  sidebar_host_config.rs  sidebar_snippets.rs  snippets.rs  status_bar.rs  tab_bar.rs  tab_jump.rs  terminal.rs  theme_picker.rs  update_modal.rs  vault.rs
crates/oryxis-app/src/views/cloud_accounts/: discovery.rs  dynamic_form.rs  list.rs  mod.rs  wizard_form.rs
crates/oryxis-app/src/views/dashboard/: grid.rs  mod.rs  toolbar.rs
crates/oryxis-app/src/views/dashboard/grid/: cloud.rs  empty.rs  group.rs  host.rs  mod.rs  session.rs
crates/oryxis-app/src/views/layout/: chrome.rs  main_layout.rs  menus.rs  mod.rs  toolbar.rs
crates/oryxis-app/src/views/settings/: about.rs  ai.rs  connection.rs  interface.rs  mod.rs  security.rs  sftp.rs  shortcuts.rs  sync.rs  terminal.rs
crates/oryxis-app/src/views/sftp/: breadcrumb.rs  columns.rs  formatting.rs  menus.rs  mod.rs  modals.rs  rows.rs  transfers.rs
crates/oryxis-app/src/views/tab_bar/: buttons.rs  ghosts.rs  mod.rs  sizing.rs  tabs.rs
crates/oryxis-app/src/widgets/: buttons.rs  cards.rs  forms.rs  host_icon.rs  inputs.rs  layout.rs  mod.rs  overlay.rs  privacy.rs  toolbar.rs
crates/oryxis-cloud/: Cargo.toml
crates/oryxis-cloud-aws/: Cargo.toml
crates/oryxis-cloud-aws-plugin/: Cargo.toml
crates/oryxis-cloud-aws-plugin/src/: dispatch.rs  main.rs
crates/oryxis-cloud-aws/src/: auth.rs  ec2.rs  ecs.rs  ecs_exec.rs  lib.rs  provider.rs  session_manager_plugin.rs  ssm.rs
crates/oryxis-cloud-k8s/: Cargo.toml
crates/oryxis-cloud-k8s-plugin/: Cargo.toml
crates/oryxis-cloud-k8s-plugin/src/: dispatch.rs  main.rs
crates/oryxis-cloud-k8s/src/: discover.rs  lib.rs  resolve.rs
crates/oryxis-cloud/src/: error.rs  lib.rs  registry.rs  resource.rs  session.rs
crates/oryxis-core/: Cargo.toml
crates/oryxis-mcp/: Cargo.toml
crates/oryxis-mcp/src/: handlers.rs  main.rs  protocol.rs  server.rs  tests.rs  tools.rs
crates/oryxis-plugin-protocol/: Cargo.toml
crates/oryxis-plugin-protocol/src/: error.rs  jsonrpc.rs  lib.rs  methods.rs
crates/oryxis-plugin-signer/: Cargo.toml
crates/oryxis-plugin-signer/src/: main.rs
crates/oryxis-relay/: Cargo.toml  Dockerfile
crates/oryxis-relay/src/: discovery.rs  main.rs  queue.rs
crates/oryxis-ssh/: Cargo.toml
crates/oryxis-ssh/src/: algorithms.rs  engine.rs  legacy_cipher_tests.rs  lib.rs  sftp.rs  sftp_harness.rs
crates/oryxis-ssh/tests/: sftp_integration.rs  ssh_integration.rs
crates/oryxis-sync/: Cargo.toml  build.rs
crates/oryxis-sync/src/: config.rs  conflict.rs  crypto.rs  engine.rs  error.rs  lib.rs  peer.rs  protocol.rs  relay.rs  tests.rs  transport.rs
crates/oryxis-sync/src/discovery/: mdns.rs  mod.rs  signaling.rs  stun.rs
crates/oryxis-sync/src/engine/: manifest.rs  mod.rs  pairing.rs  relay_glue.rs  session.rs  snapshot.rs
crates/oryxis-terminal/: Cargo.toml
crates/oryxis-terminal/src/: backend.rs  colors.rs  lib.rs  mouse.rs  osc.rs  pty.rs  widget.rs
crates/oryxis-terminal/src/widget/: clipboard.rs  highlight.rs  perf.rs  selection.rs  state.rs
crates/oryxis-vault/: Cargo.toml
crates/oryxis-vault/src/: keygen.rs  lib.rs  portable.rs  store.rs
crates/oryxis-vault/src/keygen/: mod.rs  pem.rs  ppk.rs
crates/oryxis-vault/src/store/: cloud.rs  connections.rs  forwarding.rs  groups.rs  identities.rs  keys.rs  known_hosts.rs  logs.rs  mod.rs  schema.rs  settings.rs  snippets.rs  sync.rs
crates/oryxis-vault/src/store/tests/: cloud.rs  connections.rs  core_crypto.rs  forwarding.rs  groups.rs  identities.rs  keys.rs  logs.rs  mod.rs  portable.rs  settings.rs  snippets.rs  sync.rs
packaging/: README.md
resources/: Info.plist  Oryxis.icns  app.oryxis.Oryxis.desktop  installer-user.nsi  installer.nsi  oryxis.desktop
scripts/: keygen-dev.sh
signaling-worker/: package-lock.json  worker.js  wrangler.jsonc.example
(+22 files in other folders)
