[package]
name = "oryxis-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "oryxis"
path = "src/main.rs"

[dependencies]
oryxis-core = { workspace = true }
oryxis-ssh = { workspace = true }
oryxis-terminal = { workspace = true }
oryxis-vault = { workspace = true }
oryxis-sync = { workspace = true }
iced = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rfd = "0.15"
image = "0.25"
iced_fonts = { version = "0.3", features = ["bootstrap"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
arboard = "3"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
