[package]
name = "oryxis-app"
version = "0.6.1"
edition = "2024"
description = "Modern SSH client built in Rust, terminal, SFTP, and host management with a sane keyboard-driven UI."
license.workspace = true
homepage = "https://github.com/wilsonglasser/oryxis"

[[bin]]
name = "oryxis"
path = "src/main.rs"

# cargo-deb metadata. Run `cargo deb -p oryxis-app --no-build` after a
# `cargo build --release` to produce a Debian package under
# `target/debian/`. Depends only on the GUI runtime libs winit needs.
[package.metadata.deb]
name = "oryxis"
maintainer = "Wilson Glasser <wilsonglasser@gmail.com>"
copyright = "2026, Wilson Glasser <wilsonglasser@gmail.com>"
license-file = ["../../LICENSE", "0"]
extended-description = """Oryxis is a Rust-native SSH client. It bundles a terminal, an
SFTP browser, and host management with a focus on keyboard-driven flow."""
depends = "$auto, libgtk-3-0, libwayland-client0, libxkbcommon0"
section = "net"
priority = "optional"
assets = [
    ["target/release/oryxis", "usr/bin/", "755"],
    # `oryxis-mcp` is no longer bundled; the app downloads it as a
    # plugin into `~/.oryxis/bin/oryxis-mcp` on first enable. See
    # `crates/oryxis-app/src/mcp_install.rs` for the migration path
    # v0.6 users hit on first boot after the upgrade.
    ["../../resources/oryxis.desktop", "usr/share/applications/", "644"],
    ["../../resources/logo_64.png", "usr/share/icons/hicolor/64x64/apps/oryxis.png", "644"],
    ["../../resources/logo_128.png", "usr/share/icons/hicolor/128x128/apps/oryxis.png", "644"],
    ["../../resources/logo_256.png", "usr/share/icons/hicolor/256x256/apps/oryxis.png", "644"],
    ["../../README.md", "usr/share/doc/oryxis/README.md", "644"],
]

[dependencies]
oryxis-core = { workspace = true }
oryxis-ssh = { workspace = true }
oryxis-terminal = { workspace = true }
oryxis-vault = { workspace = true }
oryxis-sync = { workspace = true }
oryxis-cloud = { workspace = true }
oryxis-plugin-protocol = { workspace = true }
# `oryxis-cloud-aws` is intentionally NOT a dependency, the AWS
# provider (and its ~1.2 GB of aws-sdk codegen) now lives in the
# `oryxis-cloud-aws-plugin` subprocess. The app talks to it over
# JSON-RPC via `plugins::PluginProvider`.
# `CloudProvider` is an async trait, the app needs `async-trait` to
# implement it for `PluginProvider`.
async-trait = "0.1"
# Ed25519 verify-only for plugin binary signatures. The workspace
# pin carries `rand_core` (sync needs key generation); the plugin
# host only ever calls `VerifyingKey::verify`, the extra feature is
# inert here.
ed25519-dalek = { workspace = true }
# SHA-256 over downloaded plugin binaries, checked against the
# manifest before the Ed25519 signature gate.
sha2 = "0.10"
# RNG used to generate the MCP server token (32 random bytes).
rand = { workspace = true }
# Base64 decode for the manifest's signature field.
base64 = { workspace = true }
# Plugin cache lives under the same `~/.oryxis` root the vault uses;
# `dirs` resolves the home directory cross-platform.
dirs = "6"
# Process-wide TLS crypto provider for rustls 0.23, the workspace
# pins `ring`, but rustls 0.23 requires explicit `install_default()`
# at startup before any TLS connection is opened. Without it the AWS
# SDK reports "dispatch failure" on the first STS call.
rustls = { workspace = true }
iced = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rfd = "0.15"
image = "0.25"
iced_fonts = { git = "https://github.com/wilsonglasser/iced_fonts", branch = "text-selection-iced-0.15", features = ["lucide", "codicon"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
# Async stream combinators, used by the AI streaming path to fold the
# reqwest byte stream into provider-specific SSE chunks.
futures-util = "0.3"
arboard = "3"
# Cross-platform "open this file with the OS default app", used by the
# SFTP edit-in-place flow to launch the user's editor on a downloaded
# temp copy. Tiny crate, no transitive deps of note.
open = "5"
# v0.7: enumerate monospace fonts installed on the host so the
# Terminal -> Font picker can offer the actual system list instead of
# the hardcoded 20-name array. Already pulled in transitively by
# cosmic-text (the iced renderer), declared explicitly here to avoid
# depending on internal re-exports.
fontdb = "0.23"
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# ShellExecuteW for the auto-updater. CreateProcess (what
# `Command::new().spawn()` uses) ignores the installer manifest and fails
# with ERROR_ELEVATION_REQUIRED (740) on the system NSIS .exe, which
# declares `requireAdministrator`. ShellExecuteW reads the manifest and
# triggers UAC for the system installer, while the per-user installer
# (asInvoker) launches without a prompt, same code path serves both.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }
# Higher-level Windows API bindings used for the JumpList COM
# interfaces (ICustomDestinationList, IShellLink, IObjectCollection)
# that `windows-sys` doesn't expose. Compile-time hit is significant
# on the first build but incremental is fine; trade is worth the
# ~100 lines of unsafe COM glue we'd otherwise have to hand-roll.
windows = { version = "0.61", features = ["Win32_UI_Shell", "Win32_UI_Shell_PropertiesSystem", "Win32_UI_Shell_Common", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_Foundation"] }
# Cross-platform tray icon, but only built on Windows. macOS and
# Linux need different lifecycle conventions (LSUIElement on macOS,
# SNI/AppIndicator on Linux), deferred to a later release.
tray-icon = "0.21"

[dev-dependencies]
# Property-based fuzzing for path/name helpers, generates random
# inputs to flush out edge cases the hand-written cases missed.
proptest = "1"
