[package]
name = "oryxis-cloud-aws"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
oryxis-core = { workspace = true }
oryxis-cloud = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
tracing = { workspace = true }
chrono = { workspace = true }

# AWS SDK, pinned to the 1.x GA series. `behavior-version-latest`
# silences the runtime nag and locks us to the current default semantics
# instead of the legacy ones the SDK keeps around for back-compat.
#
# `default-features = false` drops the legacy `rustls` feature, which would
# otherwise pull aws-smithy-http-client/legacy-rustls-ring -> hyper-rustls
# 0.24 -> rustls 0.21 -> rustls-webpki 0.101.7 (RUSTSEC vulnerable). We keep
# `default-https-client` so HTTPS still works via the modern rustls-aws-lc
# stack (rustls 0.23 + hyper-rustls 0.27).
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio", "credentials-process", "sso"] }
aws-sdk-ec2 = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ec2instanceconnect = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ecs = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ssm = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-sts = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
