[package]
name = "oryxis-cloud-k8s-plugin"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "oryxis-cloud-k8s-plugin"
path = "src/main.rs"

[dependencies]
# The Kubernetes provider, a thin wrapper over the `kubectl` CLI. Unlike
# the AWS plugin there is no heavy SDK here; the dependency stays a plugin
# (not in-process) only for architectural consistency with `aws`.
oryxis-cloud-k8s = { workspace = true }
oryxis-cloud = { workspace = true }
oryxis-plugin-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
