[package]
name = "oryxis-mcp"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "oryxis-mcp"
path = "src/main.rs"

[dependencies]
oryxis-core = { workspace = true }
oryxis-vault = { workspace = true }
oryxis-ssh = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
