[package]
name = "oryxis-ssh"
version = "0.1.0"
edition = "2024"

[dependencies]
oryxis-core = { workspace = true }
russh = { workspace = true }
russh-keys = "0.48"
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "std"] }
tokio-socks = "0.5"
uuid = { workspace = true }
