[package]
name = "oryxis-ssh"
version = "0.1.0"
edition = "2024"

[dependencies]
oryxis-core = { workspace = true }
russh = { workspace = true }
russh-sftp = "2.1"
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio-socks = "0.5"
uuid = { workspace = true }

[dev-dependencies]
# Spin up an ephemeral OpenSSH container per test for hermetic SFTP /
# SSH integration coverage — no real credentials, no shared state, no
# need for a running daemon on the dev machine.
testcontainers = "0.27"
tokio = { workspace = true, features = ["full", "test-util"] }
