[package]
name = "oryxis-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
oryxis-core = { workspace = true }
oryxis-vault = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
mdns-sd = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
chacha20poly1305 = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3"
