[package]
name = "oryxis-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
oryxis-core = { workspace = true }
alacritty_terminal = { workspace = true }
vte = { workspace = true }
portable-pty = { workspace = true }
iced = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
arboard = "3"
