[package]
name = "oryxis-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
oryxis-core = { workspace = true }
rusqlite = { workspace = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
dirs = "6"
ssh-key = { version = "0.6", features = ["ed25519", "std", "rand_core", "encryption"] }
