[package]
name = "oryxis-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
oryxis-core = { workspace = true }
rusqlite = { workspace = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
dirs = "6"
base64 = "0.22"
ssh-key = { version = "0.6", features = ["ed25519", "std", "rand_core", "encryption", "rsa", "p256", "p384"] }
rsa = { version = "0.9", features = ["pem"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
p384 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
# Encrypted PKCS#8 (`BEGIN ENCRYPTED PRIVATE KEY`) support. We decrypt
# once with pkcs8's PBES2 implementation, then hand the inner plaintext
# back to the per-algorithm PKCS#8 parsers above.
pkcs8 = { version = "0.10", features = ["encryption", "pem"] }
# PPK (PuTTY .ppk) parser primitives. All transitively present already
# via russh / ssh-key / argon2; declared here to give the keygen module
# stable direct paths.
aes = "0.8"
cbc = "0.1"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
subtle = "2"

[dev-dependencies]
tempfile = "3"
